# fastapi-limiter

./: README.md  pyproject.toml
fastapi_limiter/: __init__.py  access.py  backends.py  dashboard.py  keys.py  limiter.py  metrics.py  middleware.py
tests/: test_access.py  test_async_backend.py  test_async_redis_backend.py  test_backend.py  test_burst_limiter.py  test_dashboard.py  test_jwt_key.py  test_limiter.py  test_metrics.py  test_redis_backend.py
